--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,5 @@
 #root {
-
+  background-color: rgba(208, 236, 240, 0.87);
   text-align: center;
 }
 
@@ -11,4 +11,12 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  height: 150vh;
+  border: 1px solid #ccc;
+  background-color: rgba(208, 236, 240, 0.87);
 }
