--- a/webapp/src/style/form.css
+++ b/webapp/src/style/form.css
@@ -1,8 +1,9 @@
 .form {
     background-color: rgba(255, 255, 255, 0.05);
     border: 1px solid #d3d3d3;
-    border-radius: 0.5rem;
+    border-radius: 1.5rem;
     width: 100%;
+    font-size: larger;
   
   }
 
@@ -10,9 +11,18 @@
     width: 100%;
   }
 
-.form_input {
-    width: 100%;
+.form__input {
+    width: 80%;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 30px;
+    font-size: larger;
 }
+
+.form__label {
+  font-weight: bolder;
+}
+
 
   .full_width {
     width: 100%;
